[sync] Add an immediate refresh trigger for local sync upon sync startup.

Otherwise no sync happens on browser startup and changes made on other
computers only become visible after some syncable event is committed to the
sync local backend.

BUG=816379

Change-Id: I60c0fc8e67edd104fdc1a636abad2e829baf4f99
Reviewed-on: https://chromium-review.googlesource.com/1209622
Reviewed-by: Mikel Astiz <mastiz@chromium.org>
Commit-Queue: Julian Pastarmov <pastarmovj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589907}
Former-commit-id: 1fac2bcb83a6898e81f4845cf634f132f855bc23